# bochsym

./: .gitignore  Cargo.toml  flake.nix  vscode.code-workspace
resources/: bootloader.map
src/: lib.rs  main.rs
tests/: example_test.rs
