[package]
name = "bochsym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.3.0"
log = "0.4.14"
toml = "0.5.8"
clap = "3.2.22"
symbolic = { version = "10.0.0", features = ["debuginfo", "demangle"]}

[features]
